# reviewlensai

./: .gitignore  CLAUDE.md
ai-transcripts/: 2026-06-01-phase-1-session.jsonl  2026-06-01-phase-1-session.md  2026-06-01-phase-2-session.jsonl  2026-06-01-phase-2-session.md
analytics/: pyproject.toml
analytics/cdk/: cdk.json  package-lock.json  package.json
analytics/cdk/lib/: analytics-stack.ts
analytics/cdk/test/: analytics-stack.test.ts
analytics/docs/: ARCHITECTURE.md  CONTEXT.md
analytics/src/reviewlensai_analytics/: appsync.py  errors.py  helpful.py  log.py  main.py  payload.py  s3io.py  sentiment.py  words.py
analytics/tests/: conftest.py  test_appsync.py  test_helpful.py  test_main.py  test_payload.py  test_s3io.py  test_sentiment.py  test_smoke.py  test_words.py
app/: .eslintrc.cjs  amplify_outputs.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
app/amplify/: backend.ts
docs/: OVERVIEW.md
scraper/: pyproject.toml
scraper/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
scraper/cdk/lib/: scraper-stack.ts
scraper/cdk/test/: scraper-stack.test.ts
scraper/docs/: API_CONTRACT.md  ARCHITECTURE.md  CONTEXT.md
scraper/scripts/: verify_appsync_contract.py
scraper/src/reviewlensai_scraper/: appsync.py  log.py  scraper.py  steam.py  validator.py
scraper/tests/: conftest.py  test_appsync.py  test_log.py  test_scraper.py  test_steam.py  test_validator.py
scraper/tests/fixtures/: appdetails.json  appreviews_empty.json  appreviews_page1.json  appreviews_page2.json  appreviews_summary.json
(+86 files in other folders)
