[project]
name = "reviewlensai-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["requests>=2.32", "boto3>=1.34"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6", "responses>=0.25", "mypy>=1.11", "boto3-stubs[essential]>=1.34"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
